--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#F6F7F9" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App - Gestão OPME</title>
+    <title>Teste Gestão OPME</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
